crates/baml-rt-api/tests/snapshots/api_test__get_provenance_aggregates_unavailable_returns_501_snapshot.snap
---
source: crates/baml-rt-api/tests/api_test.rs
expression: snapshot
---
{
  "status": 501,
  "body": {
    "status": 501,
    "title": "Not Implemented",
    "detail": "Provenance query service not configured"
  }
}
