crates/baml-rt-api/tests/snapshots/api_test__get_provenance_failure_evidence_linked_modes_returns_snapshot.snap
---
source: crates/baml-rt-api/tests/api_test.rs
expression: snapshot
---
{
  "llm_linked_prompt_rejected": {
    "status": 200,
    "body": {
      "resource": "llm_calls",
      "rows": [
        {
          "activity_id": "llm_call:ctx-100-1:msg-b:bbbbbbbb-bbbb-bbbb-bbbb-bbbbbbbbbbbb:0",
          "a2a_activity_outcome": "Failed",
          "a2a_agent_id": "[uuid]",
          "a2a_client": "anthropic",
          "a2a_context_id": "ctx-100-1",
          "a2a_duration_ms": 650,
          "a2a_activity_anchor": "[prov_activity_anchor]",
          "a2a_failure_class": "failed_graph_incomplete",
          "a2a_failure_evidence": "metadata",
          "a2a_function_name": "DraftPrompt",
          "llm_result": null,
          "llm_call": {
            "input": "world"
          },
          "a2a_message_id": "msg-b",
          "a2a_model": "claude-3-7-sonnet",
          "a2a_prompt_name": "DraftPrompt",
          "a2a_usage_completion_tokens": 5,
          "a2a_usage_prompt_tokens": 20,
          "a2a_usage_total_tokens": 25,
          "prov_endTime": "[timestamp_ms]",
          "prov_type": "a2a:LlmCall",
          "context_id": "ctx-100-1",
          "message_id": "msg-b",
          "agent_id": "[uuid]",
          "provider": "anthropic",
          "model": "claude-3-7-sonnet",
          "baml_prompt": "DraftPrompt",
          "duration_ms": 650,
          "prompt_tokens": 20,
          "completion_tokens": 5,
          "total_tokens": 25,
          "timestamp_ms": "[timestamp_ms]",
          "activity_outcome": "Failed",
          "activity_status": "Completed",
          "activity_kind": "llm_call",
          "activity_ref": "prov:v1:activity:llm_call:ctx-100-1:msg-b:bbbbbbbb-bbbb-bbbb-bbbb-bbbbbbbbbbbb:0",
          "llm_call_ref": "[prov_activity_anchor]",
          "llm_result_ref": "[prov_activity_anchor]",
          "failure_class": "baml_validation_error",
          "failure_evidence": "BAML validation failed: invalid response schema"
        }
      ],
      "summary": {
        "count": 1,
        "failedCount": 1,
        "durationMsTotal": 650,
        "totalTokens": 25,
        "promptTokensTotal": 20,
        "completionTokensTotal": 5,
        "latencyHotspots": {
          "p95": 650.0,
          "p99": 650.0
        },
        "tokenHotspots": {
          "p95": 25.0,
          "p99": 25.0
        },
        "cachedInputTokensTotal": 0
      },
      "hotspotGroups": [
        {
          "groupKey": "[uuid]",
          "groupValues": [
            "[uuid]"
          ],
          "groupDimensions": [
            "agent_id"
          ],
          "count": 1,
          "failed": 1,
          "failureRate": 1.0,
          "avgDurationMs": 650.0,
          "avgTotalTokens": 25.0
        }
      ],
      "truncated": false,
      "appliedCaps": {
        "page_size": 5,
        "max_page_size": 200,
        "top_k": 10
      }
    }
  },
  "tool_linked_emitted_message": {
    "status": 200,
    "body": {
      "resource": "tool_calls",
      "rows": [
        {
          "activity_id": "tool_call:ctx-100-1:msg-c:aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa:0",
          "a2a_activity_outcome": "Failed",
          "a2a_agent_id": "[uuid]",
          "a2a_context_id": "ctx-100-1",
          "a2a_duration_ms": 240,
          "a2a_activity_anchor": "[prov_activity_anchor]",
          "a2a_failure_class": "failed_graph_incomplete",
          "a2a_failure_evidence": "metadata",
          "a2a_function_name": "DelegatePrompt",
          "a2a_message_id": "msg-c",
          "tool_result": null,
          "a2a_tool_name": "support/delegate",
          "tool_call": {
            "name": "support/delegate",
            "args": {
              "objective": "narrow evidence fixture"
            },
            "phase": null
          },
          "prov_endTime": "[timestamp_ms]",
          "prov_type": "a2a:ToolCall",
          "context_id": "ctx-100-1",
          "message_id": "msg-c",
          "agent_id": "[uuid]",
          "tool_name": "support/delegate",
          "baml_prompt": "DelegatePrompt",
          "duration_ms": 240,
          "timestamp_ms": "[timestamp_ms]",
          "activity_outcome": "Failed",
          "activity_status": "Completed",
          "activity_kind": "tool_call",
          "activity_ref": "prov:v1:activity:tool_call:ctx-100-1:msg-c:aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa:0",
          "tool_call_ref": "[prov_activity_anchor]",
          "tool_result_ref": "[prov_activity_anchor]",
          "failure_class": "failed_graph_incomplete",
          "failure_evidence": "metadata"
        }
      ],
      "summary": {
        "count": 1,
        "failedCount": 1,
        "durationMsTotal": 240,
        "totalTokens": 0,
        "promptTokensTotal": 0,
        "completionTokensTotal": 0,
        "latencyHotspots": {
          "p95": 240.0,
          "p99": 240.0
        },
        "tokenHotspots": {
          "p95": 0.0,
          "p99": 0.0
        }
      },
      "hotspotGroups": [
        {
          "groupKey": "[uuid]",
          "groupValues": [
            "[uuid]"
          ],
          "groupDimensions": [
            "agent_id"
          ],
          "count": 1,
          "failed": 1,
          "failureRate": 1.0,
          "avgDurationMs": 240.0,
          "avgTotalTokens": 0.0
        }
      ],
      "truncated": false,
      "appliedCaps": {
        "page_size": 5,
        "max_page_size": 200,
        "top_k": 10
      }
    }
  }
}
