crates/baml-rt-api/tests/snapshots/api_test__get_provenance_llm_calls_returns_snapshot.snap
---
source: crates/baml-rt-api/tests/api_test.rs
expression: snapshot
---
{
  "status": 200,
  "body": {
    "resource": "llm_calls",
    "rows": [
      {
        "activity_id": "llm_call:ctx-100-1:msg-a:aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa:1",
        "a2a_activity_anchor": "[prov_activity_anchor]",
        "a2a_activity_outcome": "Success",
        "a2a_agent_id": "[uuid]",
        "a2a_client": "openai",
        "a2a_context_id": "ctx-100-1",
        "a2a_drift_block_min_score": 0.25,
        "a2a_drift_mode": "audit",
        "a2a_drift_score": 0.6179999709129333,
        "a2a_drift_severity": "warn",
        "a2a_drift_warn_min_score": 0.5,
        "a2a_duration_ms": 181,
        "a2a_event_order": "[a2a_event_order]",
        "a2a_function_name": "SummarizePrompt",
        "a2a_intent_text_preview": "Create a task titled Research",
        "llm_result": null,
        "llm_call": {
          "input": "hello with drift"
        },
        "a2a_message_id": "msg-a",
        "a2a_model": "gpt-4o-mini",
        "a2a_prompt_message_chars": 0,
        "a2a_prompt_name": "SummarizePrompt",
        "a2a_prompt_serialized_utf8_bytes": 28,
        "a2a_response_text_preview": "Create task in list 901325431486",
        "a2a_usage_completion_tokens": 7,
        "a2a_usage_prompt_tokens": 10,
        "a2a_usage_total_tokens": 17,
        "prov_endTime": "[timestamp_ms]",
        "prov_type": "a2a:LlmCall",
        "context_id": "ctx-100-1",
        "message_id": "msg-a",
        "agent_id": "[uuid]",
        "provider": "openai",
        "model": "gpt-4o-mini",
        "baml_prompt": "SummarizePrompt",
        "duration_ms": 181,
        "prompt_tokens": 10,
        "completion_tokens": 7,
        "total_tokens": 17,
        "timestamp_ms": "[timestamp_ms]",
        "activity_outcome": "Success",
        "activity_status": "Completed",
        "activity_kind": "llm_call",
        "activity_ref": "prov:v1:activity:llm_call:ctx-100-1:msg-a:aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa:1",
        "llm_call_ref": "[prov_activity_anchor]",
        "llm_result_ref": "[prov_activity_anchor]",
        "drift": {
          "score": 0.6179999709129333,
          "severity": "warn",
          "mode": "audit",
          "warnMinScore": 0.5,
          "blockMinScore": 0.25,
          "intentTextPreview": "Create a task titled Research",
          "responseTextPreview": "Create task in list 901325431486"
        }
      },
      {
        "activity_id": "llm_call:ctx-100-1:msg-a:aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa:0",
        "a2a_activity_anchor": "[prov_activity_anchor]",
        "a2a_activity_outcome": "Success",
        "a2a_agent_id": "[uuid]",
        "a2a_client": "openai",
        "a2a_context_id": "ctx-100-1",
        "a2a_duration_ms": 180,
        "a2a_event_order": "[a2a_event_order]",
        "a2a_function_name": "SummarizePrompt",
        "llm_result": null,
        "llm_call": {
          "input": "hello"
        },
        "a2a_message_id": "msg-a",
        "a2a_model": "gpt-4o-mini",
        "a2a_prompt_message_chars": 0,
        "a2a_prompt_name": "SummarizePrompt",
        "a2a_prompt_serialized_utf8_bytes": 17,
        "a2a_usage_completion_tokens": 8,
        "a2a_usage_prompt_tokens": 12,
        "a2a_usage_total_tokens": 20,
        "prov_endTime": "[timestamp_ms]",
        "prov_type": "a2a:LlmCall",
        "context_id": "ctx-100-1",
        "message_id": "msg-a",
        "agent_id": "[uuid]",
        "provider": "openai",
        "model": "gpt-4o-mini",
        "baml_prompt": "SummarizePrompt",
        "duration_ms": 180,
        "prompt_tokens": 12,
        "completion_tokens": 8,
        "total_tokens": 20,
        "timestamp_ms": "[timestamp_ms]",
        "activity_outcome": "Success",
        "activity_status": "Completed",
        "activity_kind": "llm_call",
        "activity_ref": "prov:v1:activity:llm_call:ctx-100-1:msg-a:aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa:0",
        "llm_call_ref": "[prov_activity_anchor]",
        "llm_result_ref": "[prov_activity_anchor]"
      }
    ],
    "summary": {
      "count": 2,
      "failedCount": 0,
      "durationMsTotal": 361,
      "totalTokens": 37,
      "promptTokensTotal": 22,
      "completionTokensTotal": 15,
      "latencyHotspots": {
        "p95": 181.0,
        "p99": 181.0
      },
      "tokenHotspots": {
        "p95": 20.0,
        "p99": 20.0
      },
      "cachedInputTokensTotal": 0
    },
    "hotspotGroups": [
      {
        "groupKey": "aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa|gpt-4o-mini",
        "groupValues": [
          "[uuid]",
          "gpt-4o-mini"
        ],
        "groupDimensions": [
          "agent_id",
          "model"
        ],
        "count": 2,
        "failed": 0,
        "failureRate": 0.0,
        "avgDurationMs": 180.5,
        "avgTotalTokens": 18.5
      }
    ],
    "truncated": false,
    "appliedCaps": {
      "page_size": 50,
      "max_page_size": 200,
      "top_k": 10
    }
  }
}
