crates/baml-rt-api/tests/snapshots/api_test__get_provenance_messages_returns_snapshot.snap
---
source: crates/baml-rt-api/tests/api_test.rs
expression: snapshot
---
{
  "status": 200,
  "body": {
    "resource": "messages",
    "rows": [
      {
        "activity_id": "message:ctx-100-1:msg-a",
        "timestamp_ms": "[timestamp_ms]",
        "context_id": "ctx-100-1",
        "task_id": null,
        "message_id": "msg-a",
        "agent_id": null,
        "role": "ROLE_USER",
        "direction": "received",
        "message_text": "run analysis",
        "llm_duration_ms_sum": 1012,
        "tool_duration_ms_sum": 660,
        "total_processing_ms": 1672,
        "duration_ms": 1672,
        "message_content": "run analysis",
        "activity_status": "Completed",
        "activity_outcome": "Success",
        "activity_kind": "message_turn"
      },
      {
        "activity_id": "message:ctx-100-1:msg-c",
        "timestamp_ms": "[timestamp_ms]",
        "context_id": "ctx-100-1",
        "task_id": null,
        "message_id": "msg-c",
        "agent_id": null,
        "role": "ROLE_AGENT",
        "direction": "sent",
        "message_text": "authentication failed: 401 unauthorized invalid api key",
        "llm_duration_ms_sum": 0,
        "tool_duration_ms_sum": 0,
        "total_processing_ms": 0,
        "duration_ms": 0,
        "message_content": "authentication failed: 401 unauthorized invalid api key",
        "activity_status": "Completed",
        "activity_outcome": "Success",
        "activity_kind": "message_turn"
      },
      {
        "activity_id": "message:ctx-100-1:msg-b",
        "timestamp_ms": "[timestamp_ms]",
        "context_id": "ctx-100-1",
        "task_id": null,
        "message_id": "msg-b",
        "agent_id": null,
        "role": "ROLE_AGENT",
        "direction": "sent",
        "message_text": "BAML validation failed: invalid response schema",
        "llm_duration_ms_sum": 0,
        "tool_duration_ms_sum": 0,
        "total_processing_ms": 0,
        "duration_ms": 0,
        "message_content": "BAML validation failed: invalid response schema",
        "activity_status": "Completed",
        "activity_outcome": "Success",
        "activity_kind": "message_turn"
      }
    ],
    "summary": {
      "count": 3,
      "failedCount": 0,
      "durationMsTotal": 1672,
      "totalTokens": 0,
      "promptTokensTotal": 0,
      "completionTokensTotal": 0,
      "latencyHotspots": {
        "p95": 1672.0,
        "p99": 1672.0
      },
      "tokenHotspots": {
        "p95": 0.0,
        "p99": 0.0
      }
    },
    "hotspotGroups": [
      {
        "groupKey": "|",
        "groupValues": [
          null,
          null
        ],
        "groupDimensions": [
          "agent_id",
          "baml_prompt"
        ],
        "count": 3,
        "failed": 0,
        "failureRate": 0.0,
        "avgDurationMs": 557.3333333333334,
        "avgTotalTokens": 0.0
      }
    ],
    "truncated": false,
    "appliedCaps": {
      "page_size": 50,
      "max_page_size": 200,
      "top_k": 10
    }
  }
}
