crates/baml-rt-api/tests/snapshots/api_test__get_provenance_tool_calls_filter_sort_returns_snapshot.snap
---
source: crates/baml-rt-api/tests/api_test.rs
expression: snapshot
---
{
  "status": 200,
  "body": {
    "resource": "tool_calls",
    "rows": [
      {
        "activity_id": "tool_call:ctx-100-1:msg-a:aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa:0",
        "a2a_activity_anchor": "[prov_activity_anchor]",
        "a2a_activity_outcome": "Failed",
        "a2a_agent_id": "[uuid]",
        "a2a_context_id": "ctx-100-1",
        "a2a_duration_ms": 420,
        "tool_result": {
          "error": "timeout while calling tool"
        },
        "a2a_event_order": "[a2a_event_order]",
        "a2a_failure_class": "timeout",
        "a2a_failure_evidence": "metadata",
        "a2a_function_name": "CalcPrompt",
        "a2a_message_id": "msg-a",
        "tool_call": {
          "name": "support/calculate",
          "args": {
            "expression": "2+2"
          },
          "phase": "unknown"
        },
        "a2a_tool_name": "support/calculate",
        "tool_result_ref": "[prov_activity_anchor]",
        "prov_endTime": "[timestamp_ms]",
        "prov_time": "[timestamp_ms]",
        "prov_type": "a2a:ToolCall",
        "context_id": "ctx-100-1",
        "message_id": "msg-a",
        "agent_id": "[uuid]",
        "tool_name": "support/calculate",
        "baml_prompt": "CalcPrompt",
        "duration_ms": 420,
        "timestamp_ms": "[timestamp_ms]",
        "activity_outcome": "Failed",
        "activity_status": "Completed",
        "activity_kind": "tool_call",
        "activity_ref": "prov:v1:activity:tool_call:ctx-100-1:msg-a:aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa:0",
        "tool_call_ref": "[prov_activity_anchor]",
        "failure_class": "timeout",
        "failure_evidence": "metadata"
      }
    ],
    "summary": {
      "count": 1,
      "failedCount": 1,
      "durationMsTotal": 420,
      "totalTokens": 0,
      "promptTokensTotal": 0,
      "completionTokensTotal": 0,
      "latencyHotspots": {
        "p95": 420.0,
        "p99": 420.0
      },
      "tokenHotspots": {
        "p95": 0.0,
        "p99": 0.0
      }
    },
    "hotspotGroups": [
      {
        "groupKey": "aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa|support/calculate",
        "groupValues": [
          "[uuid]",
          "support/calculate"
        ],
        "groupDimensions": [
          "agent_id",
          "tool_name"
        ],
        "count": 1,
        "failed": 1,
        "failureRate": 1.0,
        "avgDurationMs": 420.0,
        "avgTotalTokens": 0.0
      }
    ],
    "truncated": false,
    "appliedCaps": {
      "pageSize": 50,
      "maxPageSize": 50,
      "topK": 10
    }
  }
}
