crates/baml-rt-api/tests/snapshots/api_test__post_a2a_malformed_body_returns_400.snap
---
source: crates/baml-rt-api/tests/api_test.rs
expression: snapshot
---
{
  "status": 400,
  "body": {
    "status": 400,
    "title": "Bad Request",
    "detail": "Body must be a JSON object (JSON-RPC request)"
  }
}
