crates/baml-rt-api/tests/snapshots/api_test__post_a2a_sse_no_buffering_events_arrive_incrementally.snap
---
source: crates/baml-rt-api/tests/api_test.rs
expression: snapshot
---
{
  "status": 200,
  "content_type": "text/event-stream",
  "events_received": 3,
  "first_event_within_limit": true
}
