crates/baml-rt-api/tests/snapshots/api_test__post_a2a_sse_returns_event_stream.snap
---
source: crates/baml-rt-api/tests/api_test.rs
expression: snapshot
---
{
  "status": 200,
  "content_type": "text/event-stream",
  "body": "data: {\"jsonrpc\":\"2.0\",\"result\":{\"tasks\":[],\"totalSize\":0,\"pageSize\":50},\"id\":null}\n\n"
}
